trunk/Archive2/05/2599b8f6d8a8de/output
main.cpp: In constructor ‘Detail::OwningRangeData::OwningRangeData(const uint8_t*, std::size_t)’:
main.cpp:29:5: error: expected ‘;’ before ‘}’ token
     }
     ^
main.cpp:29:5: warning: statement has no effect [-Wunused-value]
